[gd_scene load_steps=3 format=2]

[ext_resource path="res://CombatArena.gd" type="Script" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]

[node name="CombatArena" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPositions" type="Node" parent="."]

[node name="Monsters" type="Node" parent="SpawnPositions"]

[node name="Party" type="Node" parent="SpawnPositions"]

[node name="1" type="Position2D" parent="SpawnPositions/Party"]
position = Vector2( 162.906, 187.72 )

[node name="TurnQueue" type="YSort" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.481216, 0.108093 )
